# PS2-Ctrl-PluZ

./: .gitignore  README.md  ai_extractor.py  api.py  audit_results.json  main.py  package-lock.json  requirements.txt  temp_check_dob.py  temp_check_insert.py  temp_check_uuid.py
controllers/: auth_controller.py  documents_controller.py  fhir_controller.py  hospitals_controller.py  patients_controller.py  pipeline_controller.py  settlement_controller.py
core/: dependencies.py  supabase.py
data/: golden_dataset.json
data/input/: fraudulent_hospital_data.txt  lele_abhav_noobde.txt  reti_output.txt  structured_hospital_data.txt
data/output/: claim_Ashutosh_Shah.json  (+9 more)
form_template/: medi_assist.html
formatting/: ai_extractor.py  fhir_gen.py  mediassist_json_gen.py
preprocessing/: pdf_to_text.py
rcm-frontend/: .env.local  index.html  package-lock.json  package.json
retrieval/: .gitignore  README.md  app.py  docker-compose.yml  generate_handoff.py  get_chunks.py  pyproject.toml  teammate_handoff_context.txt  test_icd_pdf.py  test_pdf_ingestion.py
retrieval/data_from_preprocessing/: structured_hospital_data.txt
retrieval/src/database/: db_init.py  db_manager.py
retrieval/src/ingestion/: icd_parser.py  pdf_parser.py  web_scraper.py
retrieval/src/retrieval/: pipeline.py  reranker.py  retriever.py
routers/: auth.py  documents.py  fhir_records.py  hospitals.py  patients.py  pipeline.py  settlement.py  users.py
schemas/: auth.py  documents.py  fhir_records.py  hospitals.py  patients.py  settlement.py  users.py
validator/: final_dict.py  final_val.py
(+29 files in other folders)
